--- a/customer-registration/build.gradle
+++ b/customer-registration/build.gradle
@@ -25,11 +25,10 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'io.hawt', name: 'hawtio-springboot', version: '2.4.0'
 	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
 		testCompile group: 'junit', name: 'junit', version: '4.11'
 	}
-	compile('io.springfox:springfox-swagger2:2.9.2')
-	compile('io.springfox:springfox-swagger-ui:2.9.2')
 }
 
 test {
