--- a/product-registration/build.gradle
+++ b/product-registration/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'io.hawt', name: 'hawtio-springboot', version: '2.4.0'
 	testImplementation ('org.springframework.boot:spring-boot-starter-test')
 	testCompile group: 'junit', name: 'junit', version: '4.11'
 	compile('io.springfox:springfox-swagger2:2.9.2')
