--- a/sales-registration/build.gradle
+++ b/sales-registration/build.gradle
@@ -22,10 +22,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'junit:junit:4.12'
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'junit:junit:4.12'
+	implementation 'junit:junit:4.12'
+	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'io.hawt', name: 'hawtio-springboot', version: '2.4.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile('io.springfox:springfox-swagger2:2.9.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
